# efficalc

./: .gitignore  LICENSE  Makefile  README.md  build_section_tables.py  main.py  pyproject.toml  pythonize_csv.py  requirements.txt  requirements_dev.txt
.github/workflows/: coveralls.yml  python-package.yml  tests.yml
docs/: .buildinfo  base_classes.html  calculation_helpers.html  canvas.html  constants.html  examples.html  figures.html  genindex.html  get_started.html  index.html  integration.html  math_operations.html  objects.inv  purpose.html  py-modindex.html  search.html  searchindex.js  section_properties.html  styling.html  testing.html
docs/.doctrees/: base_classes.doctree  calculation_helpers.doctree  canvas.doctree  constants.doctree  environment.pickle  examples.doctree  figures.doctree  get_started.doctree  index.doctree  integration.doctree  math_operations.doctree  purpose.doctree  section_properties.doctree  styling.doctree  testing.doctree
docs/_sources/: canvas.rst.txt  index.rst.txt  math_operations.rst.txt
docs_src/: base_classes.rst  calculation_helpers.rst  canvas.rst  conf.py  constants.rst  examples.rst  figures.rst  get_started.rst  index.rst  integration.rst  math_operations.rst  purpose.rst  section_properties.rst  styling.rst  testing.rst
efficalc/: __init__.py  calculation_runner.py  constants.py  generate_html.py  report_builder.py  unit_conversions.py
efficalc/base_definitions/: assumption.py  calculation.py  canvas.py  comparison.py  comparison_statement.py  figure.py  heading.py  input.py  shared.py  symbolic.py  table.py  text_block.py  title.py
efficalc/canvas/: __init__.py  canvas.py  canvas_elements.py
efficalc/sections/: __init__.py  aisc_angle.py  (+13 more)
efficalc_venv/: pyvenv.cfg
examples/: point_load_beam_moment_and_deflection.py  steel_beam_moment_strength.py  steel_beam_optimizer.py
tests/: test_calculation_runner.py  test_generate_html.py  test_math_operations.py  test_report_builder.py
utils/: build_section_tables.py  pythonize_csv.py
(+151 files in other folders)
